--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
+
 }
 
 .top-bar {
@@ -18,16 +19,28 @@ body {
     margin-right: 20px;
 }
 
+@media only screen and (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        margin-left: 0;
+    }
+    .sidebar {
+        width: 100%;
+        position: static;
+        box-shadow: none;
+    }
+}
+
 .container {
     display: flex;
 }
 
 .sidebar {
     width: 200px;
-    background-color: #fff; /* 白色背景 */
+    background-color: #f5f5f5; /* 淡灰色背景 */
     position: fixed;
     height: 100vh;
-    overflow-y: auto; /* 当内容溢出时，添加滚动条 */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 添加阴影效果 */
 }
 
 .sidebar ul {
@@ -47,6 +60,7 @@ body {
 
 .sidebar ul li a:hover {
     background-color: #ecf0f1; /* 淡灰色背景 */
+    color: #3498db;
 }
 
 main {
@@ -55,6 +69,35 @@ main {
     padding: 2rem;
     background-color: #fff; /* 白色背景 */
 }
+
+.search-box {
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 150px;
+}
+
+.search-box input[type="text"] {
+    padding:10px 200px 10px 200px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.search-box button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.search-box button:hover {
+    background-color: #2980b9;
+}
+
 
 .section {
     background-color: #ecf0f1; /* 淡灰色背景 */
@@ -69,3 +112,32 @@ footer {
     text-align: center;
     padding: 1rem 0;
 }
+
+ul{
+    /*去掉默认的列表样式*/
+    list-style: none;
+    /*去掉内边距*/
+    padding: 0;
+}
+
+li.son {
+    display: inline-block;
+    margin-right: 20px; /* 减小右侧间距 */
+    margin-bottom: 10px; /* 增加底部间距 */
+    background-color: #3498db; /* 蓝色背景 */
+    color: #fff;
+    padding: 10px 48px; /* 调整内边距 */
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+li.son a{
+    text-decoration: none; /* 去掉链接的下划线 */
+    color: #fff; /* 设置链接文字颜色为白色 */
+}
+
+li.son:hover {
+    background-color: #2980b9; /* 深蓝色背景 */
+    color: #fff;
+}
+
